--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <img src="tenor.gif" id="tenor">
         <div id="home" class="flex-center flex-column">
             <h1>How well do you know Naija?</h1>
-            <a class="btn" href="/game.html">Play</a>
-            <a class="btn" href="/highscore.html">High Scores</a>
+            <a class="btn" href="../quickquiz/game.html">Play</a>
+            <a class="btn" href="../quickquiz/highscore.html">High Scores</a>
         </div>
     </div>
 </body>
