--- a/end.html
+++ b/end.html
@@ -20,8 +20,19 @@
             </form>
             <a class="btn" href="/game.html">Play Again</a>
             <a class="btn" href="/">Go Home</a>
+         <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+                <p>Share your score with your friends!!!</p>
+                <div id="share">
+                    <a class="a2a_button_facebook"></a>
+                    <a class="a2a_button_twitter"></a>
+                    <a class="a2a_button_whatsapp"></a>
+                </div>
+            </div>
         </div>
     </div>
+
+    <script async src="https://static.addtoany.com/menu/page.js"></script>
+    <!-- AddToAny END -->
     <script src="end.js"></script>
 </body>
 
