--- a/end.html
+++ b/end.html
@@ -21,7 +21,7 @@
             <a class="btn" href="/game.html">Play Again</a>
             <a class="btn" href="/">Go Home</a>
          <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
-                <p>Share your score with your friends!!!</p>
+                <p style="margin-top: 2rem;">Share your score with your friends!!!</p>
                 <div id="share">
                     <a class="a2a_button_facebook"></a>
                     <a class="a2a_button_twitter"></a>
