--- a/end.html
+++ b/end.html
@@ -11,6 +11,7 @@
 <body>
     <div class="container">
         <div id="end" class="flex-center flex-column">
+            <h1>Final Score</h1>
             <h1 id="finalScore">
 
             </h1>
