--- a/end.html
+++ b/end.html
@@ -19,8 +19,8 @@
                 <input type="text" name="username" id="username" placeholder="username">
                 <button type="submit" class="btn" id="saveScoreBtn" onclick="saveHighScore(event)" disabled>Save</button>
             </form>
-            <a class="btn" href="/game.html">Play Again</a>
-            <a class="btn" href="/">Go Home</a>
+            <a class="btn" href="..../quickquiz/game.html">Play Again</a>
+            <a class="btn" href="../quickquiz/index.html">Go Home</a>
          <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
                 <p style="margin-top: 2rem;">Share your score with your friends!!!</p>
                 <div id="share">
