--- a/end.html
+++ b/end.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Congrats!</title>
+    <title>How well do you know Naija?</title>
     <link rel="stylesheet" href="app.css">
 </head>
 
@@ -21,8 +21,8 @@
             </form>
             <a class="btn" href="..../quickquiz/game.html">Play Again</a>
             <a class="btn" href="../quickquiz/index.html">Go Home</a>
-         <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
-                <p style="margin-top: 2rem;">Share your score with your friends!!!</p>
+         <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="https://kachielite.github.io/quickquiz/">
+                <p style="margin-top: 2rem;">Challenge your friends to take this quick!!!</p>
                 <div id="share">
                     <a class="a2a_button_facebook"></a>
                     <a class="a2a_button_twitter"></a>
