--- a/end.html
+++ b/end.html
@@ -19,7 +19,7 @@
                 <input type="text" name="username" id="username" placeholder="username">
                 <button type="submit" class="btn" id="saveScoreBtn" onclick="saveHighScore(event)" disabled>Save</button>
             </form>
-            <a class="btn" href="..../quickquiz/game.html">Play Again</a>
+            <a class="btn" href="../quickquiz/game.html">Play Again</a>
             <a class="btn" href="../quickquiz/index.html">Go Home</a>
          <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="https://kachielite.github.io/quickquiz/">
                 <p style="margin-top: 2rem;">Challenge your friends to take this quick!!!</p>
